Changed the package.json file

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "Javascript", "DSA"
+  ],
+  "author": "Kumar Sumit",
   "license": "ISC"
 }
